vlib/v/checker/tests/import_mod_as_duplicate_err.vv
module json2

import json as json2

_ := json2.encode('foo')
